[package]
name = "your_project_name"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.6.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
sanitize-filename = "0.5.0"
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
